Fix body overflow scrolling issues.

--- a/main.css
+++ b/main.css
@@ -17,6 +17,8 @@ body {
     background-blend-mode: multiply;
     */
     overflow: auto;
+    overflow-x: hidden;
+    overflow-y: hidden;
     background-color: #111111;
     color: #EEEEEE;
     font-family: sans-serif;
@@ -29,9 +31,11 @@ body {
     opacity: 5;
     line-height: 2em;
 
+    /*
     min-height: 100%;
     min-width: 100%;
     width: 100%;
+    */
 }
 
 .header-image {
@@ -42,7 +46,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: repeat(1fr, 4);
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: minmax(100px, auto);
     gap: 0px;
 }
@@ -123,7 +127,7 @@ button {
 @media (min-width: 1500px) {
     .container {
         display: grid;
-        grid-template-columns: repeat(1fr, 4);
+        grid-template-columns: repeat(4, 1fr);
         grid-auto-rows: minmax(100px, auto);
         gap: 0px;
     }
